# cli-analytics

./: .gitignore  README.md  render.yaml  requirements.txt  test_script.py
app/: __init__.py  auth.py  db.py  experiments.py  infer.py  ingest.py  keys.py  main.py  models.py  privacy.py  recommendations.py  reports.py  schemas.py  settings.py
dashboard/: index.html
example-cli/: mycli.py  requirements.txt
example-cli-node/: cli.js  package.json
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_api_keys.py  003_recommendations_experiments.py  004_add_tool_name_isolation.py  005_backfill_tool_names.py
scripts/: generate_sample.py  post_events.py
sdk/: README.md  pyproject.toml
sdk-node/: README.md  package.json  tsconfig.json
sdk-node/src/: index.ts
sdk/cli_analytics/: __init__.py  tracker.py
stress-test/: requirements.txt  stress_cli.py
tests/: __init__.py  conftest.py  test_sessionization.py  test_workflow_inference.py
