[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-analytics"
version = "0.1.0"
description = "Privacy-first analytics for CLI tools"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["httpx>=0.24.0"]

[project.urls]
Homepage = "https://github.com/yourusername/cli-analytics"
